Set up several classes for Product including entity, controller, repository, and service skeleton. Added some hardcoded products into the controller to test it. Also set up "/" and "/product/{id}" pages.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.password=${DB_PASSWORD}
 server.port=${PORT:8080}
 
 logging.file.name=stydstore.log
+
+#aws.s3.accessKeyId=${accessKeyId}
+#aws.s3.secretAccessKey=${secretKey}
+#aws.s3.bucketName=${bucketName}
+#aws.s3.region=${region}
