--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,7 @@ aws.s3.secretAccessKey=${secretKey}
 aws.s3.bucketName=${bucketName}
 aws.s3.region=${region}
 
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=6MB
+
 logging.file.name=stydstore.log
