--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ aws.s3.secretAccessKey=${secretKey}
 aws.s3.bucketName=${bucketName}
 aws.s3.region=${region}
 
+spring.servlet.multipart.enabled=true
+
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=6MB
 
