--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,11 @@
             <artifactId>aws-java-sdk-s3</artifactId>
             <version>1.12.772</version>
         </dependency>
-
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.17.1</version>
+        </dependency>
 
     </dependencies>
 
