--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,10 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
+                    <compilerArgs>
+                        <arg>--release</arg>
+                        <arg>21</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
