--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,11 @@
             <artifactId>commons-codec</artifactId>
             <version>1.17.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>26.12.0</version>
+        </dependency>
     </dependencies>
 
     <build>
