--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,6 @@ spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=6MB
 
 
+stripe.secret-key=${stripeSecretKey}
+
 logging.file.name=stydstore.log
